# repo-for-test

./: CMakeLists.txt  README.md  file  file1
include/utilities/: Noncopyable.hpp  configure.hpp  singletonVariadicTemplate  singletonVariadicTemplate.hpp  utilities.hpp
src/: configure.cc  utilities.cc
test/: testSingletonVariadicTemplate.cc  testUtilities.cc
